wui autoassess poc update

--- a/wui/static/autoassessloadingpoc.html
+++ b/wui/static/autoassessloadingpoc.html
@@ -96,12 +96,13 @@
 
 
     .missing-content-wrap .robot {
+        border-radius: unset;
         display: flex;
         justify-content: space-between;
         flex-shrink: 0;
         width: 75px;
         height: 45px;
-        padding: 16.5px 10.5px 0 10.5px;
+        padding: 16px 10px 0 10px;
         background-color: #a8a8a8;
         border-top-left-radius: 20% 25%;
         border-top-right-radius: 20% 25%;
